--- a/ejercicioadmin.html
+++ b/ejercicioadmin.html
@@ -47,8 +47,8 @@
         }
       }
     </style>
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260208d" />
-    <script src="assets/js/layout.js?v=20260208d" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260208m" />
+    <script src="assets/js/layout.js?v=20260208m" type="module"></script>
   </head>
 
   <body data-page="ejercicioadmin">
@@ -571,7 +571,7 @@
           </div>
           <textarea
             id="bulkImportArea"
-            placeholder="Wklej wiersze z arkusza. Przyklad:\n\ntype\tprompt\tanswer\toptions\tcategory\ttags\tnotes\timageUrl\torder\nOpción múltiple\tElige la forma correcta...\tB\tA) ...||B) ...||C) ...\tgrammar\tczasowniki\t\t\t1\nRellenar los espacios\tYo ___ de España.\tsoy\t\tgrammar\t\t\t\t\n\nSeparator kolumn: TAB (zalecane) lub srednik (;)."
+            placeholder="Wklej wiersze z arkusza. Przyklad:\n\ntype\tprompt\tanswer\toptions\tcategory\ttags\tnotes\timageUrl\torder\nOpciÃ³n mÃºltiple\tElige la forma correcta...\tB\tA) ...||B) ...||C) ...\tgrammar\tczasowniki\t\t\t1\nRellenar los espacios\tYo ___ de EspaÃ±a.\tsoy\t\tgrammar\t\t\t\t\n\nSeparator kolumn: TAB (zalecane) lub srednik (;)."
           ></textarea>
           <div class="smallNote" style="margin-top: 8px">
             - Naglowek jest opcjonalny. Jesli go nie ma, uzywamy: <b>prompt, answer, options, category, tags, notes, imageUrl, order</b>.<br />
@@ -637,7 +637,7 @@
           ></textarea>
           <div class="smallNote" style="margin-top: 8px">
             Format linii: <b>PL</b> + TAB + <b>ES</b> + (opcjonalnie) TAB + <b>EX</b>.<br />
-            Przyklad: <code>dzien dobry\tbuenos días\tEX: Dzien dobry, jak sie masz?</code>
+            Przyklad: <code>dzien dobry\tbuenos dÃ­as\tEX: Dzien dobry, jak sie masz?</code>
           </div>
           <div class="adminActions" style="margin-top: 10px">
             <button class="btn btn-yellow" id="btnImportFlashcards" type="button">
