--- a/esadmin.html
+++ b/esadmin.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <title>Admin | AquiVivo</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <link href="assets/css/styles.css?v=20260208d" rel="stylesheet" />
-    <script src="assets/js/layout.js?v=20260208d" type="module"></script>
+    <link href="assets/css/styles.css?v=20260208m" rel="stylesheet" />
+    <script src="assets/js/layout.js?v=20260208m" type="module"></script>
   </head>
   <body data-page="esadmin">
     <div id="appHeader"></div>
