--- a/espanel.html
+++ b/espanel.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260208d" />
-    <script src="assets/js/layout.js?v=20260208d" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260208m" />
+    <script src="assets/js/layout.js?v=20260208m" type="module"></script>
   </head>
 
   <body data-page="panel">
@@ -23,14 +23,14 @@
               <div class="heroTitleRow">
                 <div class="heroIcon heroIcon--avatar" id="userAvatarWrap">
                   <img id="userAvatarImg" alt="Foto de perfil" />
-                  <span id="userAvatarFallback">??</span>
+                  <span id="userAvatarFallback"></span>
                 </div>
                 <div>
                   <h1 class="glow-text" id="panelTitle" style="margin: 0; font-size: 44px">
-                    ¡Buenas!
+                    Â¡Buenas!
                   </h1>
                   <div class="muted" id="panelSubtitle" style="margin-top: 6px">
-                    Aquí tienes tu libreta!<br />¡Qué chimba verte!
+                    AquÃ­ tienes tu libreta!<br />Â¡QuÃ© chimba verte!
                   </div>
                   <div class="metaRow" style="margin-top: 10px; gap: 10px; flex-wrap: wrap">
                     <button class="btn-white-outline" id="btnAvatarUpload" type="button">
@@ -50,9 +50,9 @@
                 style="margin-top: 14px; flex-wrap: wrap; gap: 10px"
               >
                 <span
-                  >?? <b id="userEmail">...</b>
+                  ><b id="userEmail">...</b>
                   <span id="adminBadge" style="margin-left: 10px"
-                    >(admin: —)</span
+                    >(admin: â€”)</span
                   ></span
                 >
 
@@ -71,25 +71,25 @@
             <div class="panelOverviewGrid">
             <div class="card" id="trialCard">
               <div class="sectionTitle" style="margin-top: 0">
-                ?? Prueba gratis A1
+                Prueba gratis A1
               </div>
               <div class="metaRow" style="margin-top: 10px; gap: 10px; flex-wrap: wrap">
                 <button class="btn-yellow" id="btnTrialA1" type="button">
-                  Activa A1 gratis 7 días
+                  Activa A1 gratis 7 dÃ­as
                 </button>
               </div>
               <div class="hintSmall" id="trialMsg" style="margin-top: 8px; display: none"></div>
             </div>
             <div class="card" id="lastActivityCard">
               <div class="sectionTitle" style="margin-top: 0">
-                ?? Última actividad
+                Ãšltima actividad
               </div>
-              <div class="muted" id="lastActivityWhen">—</div>
+              <div class="muted" id="lastActivityWhen">â€”</div>
               <div
                 style="margin-top: 10px; font-weight: 900"
                 id="lastActivityTitle"
               >
-                —
+                â€”
               </div>
               <div style="margin-top: 12px">
                 <a id="lastActivityLink" class="btn-white-outline" href="#"
@@ -105,11 +105,11 @@
               >
                 <span id="progTopics">Temas: -</span>
                 <span id="progCompleted">Completados: -</span>
-                <span id="progPractice">Práctica: -</span>
+                <span id="progPractice">PrÃ¡ctica: -</span>
                 <span id="progTest">Test: -</span>
               </div>
               <div class="hintSmall" id="progLastActivity" style="margin-top: 8px">
-                Última actividad: -
+                Ãšltima actividad: -
               </div>
             </div>
             </div>
@@ -124,7 +124,7 @@
                 <span id="reviewNew">Nuevas: -</span>
               </div>
               <div class="hintSmall" id="reviewPlan" style="margin-top: 8px">
-                Plan: 10 min al día
+                Plan: 10 min al dÃ­a
               </div>
               <div id="reviewWeek" class="reviewWeek" style="margin-top: 10px"></div>
               <div class="metaRow" style="margin-top: 12px; gap: 10px">
@@ -135,7 +135,7 @@
                   href="ajustes.html#repaso"
                   aria-label="Ajustes de repaso"
                   title="Ajustes de repaso"
-                  >??</a>
+                  ></a>
                 <span class="hintSmall" id="reviewHint"></span>
               </div>
            </div>
@@ -170,7 +170,7 @@
                     <input
                       id="communitySearchInput"
                       class="ps-input"
-                      placeholder="Busca por nombre o @usuario…"
+                      placeholder="Busca por nombre o @usuarioâ€¦"
                       autocomplete="off"
                       spellcheck="false"
                     />
@@ -182,7 +182,7 @@
                         aria-label="Limpiar"
                         title="Limpiar"
                       >
-                        ×
+                        Ã—
                       </button>
                       <button
                         id="btnCommunitySearch"
@@ -191,7 +191,7 @@
                         aria-label="Buscar"
                         title="Buscar"
                       >
-                        ??
+                        
                       </button>
                     </div>
                   </div>
@@ -228,10 +228,10 @@
             <div class="card card--promo referral-card referral-card--compact" id="referralCard">
             
             <div class="sectionTitle" style="margin-top: 0">
-              ?? Tengo código de un pana ??
+              Tengo cÃ³digo de un pana 
             </div>
             <div class="muted">
-              Compártelo con tus panas. Si lo usan, tú ganas algo también ??
+              CompÃ¡rtelo con tus panas. Si lo usan, tÃº ganas algo tambiÃ©n 
             </div>
 
             <div
@@ -249,7 +249,7 @@
                 class="btn-white-outline"
                 type="button"
               >
-                ?? Copiar
+                Copiar
               </button>
             </div>
 
@@ -258,8 +258,8 @@
             <div class="hr"></div>
 
             <details class="refDetails">
-              <summary>?? Tengo código de un pana ??</summary>
-              <div class="muted">Escribe el código para asociarlo a tu cuenta.</div>
+              <summary>Tengo cÃ³digo de un pana </summary>
+              <div class="muted">Escribe el cÃ³digo para asociarlo a tu cuenta.</div>
               <div
                 class="metaRow"
                 style="
@@ -285,13 +285,13 @@
             <div class="hr"></div>
 
             <details class="refDetails">
-              <summary>?? Cómo van mis códigos</summary>
+              <summary>CÃ³mo van mis cÃ³digos</summary>
               <div
                 class="metaRow"
                 style="margin-top: 10px; gap: 10px; flex-wrap: wrap"
               >
-                <span id="refStatInvites">?? Recomendaciones: 0</span>
-                <span id="refStatRewards">?? Recompensas: 0</span>
+                <span id="refStatInvites">Recomendaciones: 0</span>
+                <span id="refStatRewards">Recompensas: 0</span>
               </div>
               <div id="refRewardsList" class="muted" style="margin-top: 10px"></div>
               <div
@@ -303,8 +303,8 @@
             </div>
             <div id="pagos"></div>
             <div class="card promo-mini" id="promoMini">
-              <div class="promo-mini-title">?? Tú ganas 20%</div>
-              <div class="promo-mini-sub">?? Tu amigo 10%</div>
+              <div class="promo-mini-title">TÃº ganas 20%</div>
+              <div class="promo-mini-sub">Tu amigo 10%</div>
             </div>
           </div>
           </div>
@@ -312,7 +312,7 @@
 
         <div id="cursos"></div>
         <div class="card coursesSection" style="margin-top: 16px">
-          <div class="sectionTitle" style="margin-top: 0">?? Cursos</div>
+          <div class="sectionTitle" style="margin-top: 0">Cursos</div>
           <div class="muted">Selecciona un nivel para empezar.</div>
           <div
             id="coursesCards"
@@ -387,7 +387,7 @@
             <div class="panelGrid">
               <div class="card">
                 <div class="sectionTitle" style="margin-top: 0">Nivel</div>
-                <div id="metaLevel" class="muted">—</div>
+                <div id="metaLevel" class="muted">â€”</div>
                 <div style="margin-top: 12px">
                   <label class="muted" style="font-weight: 900">Title</label>
                   <input id="metaTitle" type="text" />
@@ -400,7 +400,7 @@
 
               <div class="card">
                 <div class="sectionTitle" style="margin-top: 0">
-                  Botón / Tile
+                  BotÃ³n / Tile
                 </div>
                 <div class="metaRow">
                   <input
@@ -490,7 +490,7 @@
 
               <div class="card">
                 <div class="sectionTitle" style="margin-top: 0">
-                  Botón / Tile
+                  BotÃ³n / Tile
                 </div>
                 <div class="metaRow">
                   <input
@@ -558,7 +558,7 @@
       </div>
     </main>
 
-    <script type="module" src="assets/js/pages/panel-page.js?v=20260208d"></script>
+    <script type="module" src="assets/js/pages/panel-page.js?v=20260208m"></script>
   </body>
 </html>
 
