--- a/flashcards.html
+++ b/flashcards.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260208d" />
-    <script src="assets/js/layout.js?v=20260208d" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260208m" />
+    <script src="assets/js/layout.js?v=20260208m" type="module"></script>
   </head>
 
   <body data-page="flashcards">
@@ -19,11 +19,11 @@
       <div class="container">
         <section class="heroBanner heroBanner--review">
           <div class="heroTitleRow">
-            <div class="heroIcon">??</div>
+            <div class="heroIcon"></div>
             <div>
               <h1 class="glow-text" style="margin: 0">Fichas</h1>
               <div class="subtitle" style="margin-top: 6px">
-                Modo rápido tipo Quizlet.
+                Modo rÃ¡pido tipo Quizlet.
               </div>
             </div>
           </div>
@@ -45,7 +45,7 @@
               Solo favoritos
             </label>
           </div>
-          <div class="hintSmall" id="fcStatus" style="margin-top: 8px">—</div>
+          <div class="hintSmall" id="fcStatus" style="margin-top: 8px">â€”</div>
         </section>
 
         <section class="card reviewCard" id="fcCard" style="margin-top: 14px">
@@ -68,7 +68,7 @@
         <section class="card" id="fcEmpty" style="display: none; margin-top: 14px">
           <div class="sectionTitle" style="margin-top: 0">Sin fichas</div>
           <div class="muted">
-            No hay tarjetas para este tema. Añade ejercicios tipo "Tarjetas interactivas".
+            No hay tarjetas para este tema. AÃ±ade ejercicios tipo "Tarjetas interactivas".
           </div>
           <div style="margin-top: 12px">
             <a class="btn-yellow" href="espanel.html">Volver a la Libreta</a>
