--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;800;900&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260208d" />
-    <script src="assets/js/layout.js?v=20260208d" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260208m" />
+    <script src="assets/js/layout.js?v=20260208m" type="module"></script>
 </head>
 
 <body data-page="index">
@@ -28,7 +28,7 @@
             </h1>
 
             <p class="subtitle" style="margin:14px 0 0; font-size:18px; line-height:1.6;">
-              Soy Magdalena — profesora de español y polaco en Let's Talk Poznan. Te ayudo a descubrir que el polaco no es tan dificil como parece, que puede ser ligero, agradable y realmente "alcanzable" ??
+              Soy Magdalena â€” profesora de espaÃ±ol y polaco en Let's Talk Poznan. Te ayudo a descubrir que el polaco no es tan dificil como parece, que puede ser ligero, agradable y realmente "alcanzable" 
             </p>
 
             <div style="margin-top:16px; display:flex; gap:12px; flex-wrap:wrap;">
@@ -48,7 +48,7 @@
 
               <div style="margin-top:12px; display:flex; justify-content:center;">
                 <div class="coffee-hero-wrap">
-                  <img src="assets/img/coffee.png" alt="Café" class="coffee-hero" />
+                  <img src="assets/img/coffee.png" alt="CafÃ©" class="coffee-hero" />
                   <span class="coffee-steam coffee-steam--left"></span>
                   <span class="coffee-steam coffee-steam--mid"></span>
                   <span class="coffee-steam coffee-steam--right"></span>
@@ -72,11 +72,11 @@
           </div>
           <div class="card statCard">
             <div style="font-weight:900; font-size:34px; color:var(--pastel-blue);">10</div>
-            <div class="muted">años</div>
+            <div class="muted">aÃ±os</div>
           </div>
           <div class="card statCard">
             <div style="font-weight:900; font-size:34px; color:var(--red);">4.9?</div>
-            <div class="muted">valoración</div>
+            <div class="muted">valoraciÃ³n</div>
           </div>
         </div>
       </div>
@@ -145,7 +145,7 @@
         <div class="method-grid">
           <article class="method-card method-card--yellow">
             <div class="method-badge">Precio de Lanzamiento</div>
-            <div class="method-level">?? NIVEL A1-A2</div>
+            <div class="method-level">NIVEL A1-A2</div>
             <h3>Fundamentos de la vida en Polonia</h3>
             <p class="method-lead">Ideal para empezar tu vida en Polonia PL</p>
             <ul class="method-list">
@@ -159,7 +159,7 @@
 
           <article class="method-card method-card--white">
             <div class="method-badge method-badge--red">Oferta Especial</div>
-            <div class="method-level">?? NIVEL B1</div>
+            <div class="method-level">NIVEL B1</div>
             <h3>Vida independiente en Polonia</h3>
             <p class="method-sub">Para trabajar, comunicarte y vivir con confianza</p>
             <ul class="method-list">
@@ -173,7 +173,7 @@
 
           <article class="method-card method-card--red">
             <div class="method-badge method-badge--white">Precio Promocional</div>
-            <div class="method-level">?? NIVEL B2</div>
+            <div class="method-level">NIVEL B2</div>
             <h3>Integraci&oacute;n total</h3>
             <p class="method-sub">Para integrarte completamente y avanzar profesionalmente</p>
             <ul class="method-list">
@@ -204,7 +204,7 @@
 
         <div class="services-plus-grid">
           <article class="services-plus-card sp-yellow">
-            <div class="sp-icon">??</div>
+            <div class="sp-icon"></div>
             <h3>Ayuda con Tr&aacute;mites</h3>
             <p>Acompa&ntilde;amiento en oficinas, traducci&oacute;n de documentos oficiales.</p>
             <div class="sp-price">Desde 100 PLN</div>
@@ -214,7 +214,7 @@
           </article>
 
           <article class="services-plus-card sp-blue">
-            <div class="sp-icon">??</div>
+            <div class="sp-icon"></div>
             <h3>Polaco Empresarial</h3>
             <p>Clases para empresas con empleados hispanohablantes.</p>
             <div class="sp-actions">
@@ -233,8 +233,8 @@
     <section id="contact" class="contactSection">
       <div class="container">
         <div class="contactHead">
-          <h2>¿Listo para Empezar tu Aventura?</h2>
-          <p>Reserva tu primera clase gratis y descubre cómo puedo ayudarte a dominar el polaco y adaptarte a tu nueva vida en Polonia.</p>
+          <h2>Â¿Listo para Empezar tu Aventura?</h2>
+          <p>Reserva tu primera clase gratis y descubre cÃ³mo puedo ayudarte a dominar el polaco y adaptarte a tu nueva vida en Polonia.</p>
         </div>
 
         <div class="contactGrid">
@@ -276,7 +276,7 @@
                 </svg>
               </div>
               <div class="contactMeta">
-                <div class="contactLabel">Ubicación</div>
+                <div class="contactLabel">UbicaciÃ³n</div>
                 <div class="contactValue">Poznan, Polonia</div>
               </div>
             </div>
@@ -311,18 +311,18 @@
           </div>
 
           <form class="contactFormCard" action="#" method="post" autocomplete="on">
-            <h3>Envíame un Mensaje</h3>
+            <h3>EnvÃ­ame un Mensaje</h3>
 
             <label for="contactEmail">Email<span class="req">*</span></label>
             <input id="contactEmail" name="email" class="input" type="email" placeholder="tu@email.com" required / autocomplete="email">
 
             <label for="contactMsg">Mensaje<span class="req">*</span></label>
-            <textarea id="contactMsg" name="message" placeholder="¿En qué puedo ayudarte?" required autocomplete="off"></textarea>
+            <textarea id="contactMsg" name="message" placeholder="Â¿En quÃ© puedo ayudarte?" required autocomplete="off"></textarea>
 
             <div class="contactCheck">
               <input id="contactPrivacy" type="checkbox" required / name="privacy" autocomplete="off">
               <label for="contactPrivacy" style="margin:0; font-weight:800;">
-                Acepto la <a href="#" style="color:var(--blue); font-weight:900;">Política de Privacidad</a><span class="req">*</span>
+                Acepto la <a href="#" style="color:var(--blue); font-weight:900;">PolÃ­tica de Privacidad</a><span class="req">*</span>
               </label>
             </div>
 
