--- a/kontakt.html
+++ b/kontakt.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260208d" />
-    <script src="assets/js/layout.js?v=20260208d" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260208m" />
+    <script src="assets/js/layout.js?v=20260208m" type="module"></script>
   </head>
 
   <body data-page="contacto">
@@ -23,7 +23,7 @@
             <div>
               <h1 class="glow-text" style="margin: 0">Contacto</h1>
               <div class="subtitle" style="margin-top: 6px">
-                Datos de contacto y horario de atención.
+                Datos de contacto y horario de atenciÃ³n.
               </div>
             </div>
           </div>
@@ -50,10 +50,10 @@
         </section>
 
         <section class="card" style="margin-top: 12px">
-          <div class="sectionTitle" style="margin-top: 0">Horario de atención</div>
+          <div class="sectionTitle" style="margin-top: 0">Horario de atenciÃ³n</div>
           <div class="muted">
-            Contacto por correo: 7 días a la semana<br />
-            Contacto telefónico: lunes&ndash;viernes, 10:00&ndash;16:00
+            Contacto por correo: 7 dÃ­as a la semana<br />
+            Contacto telefÃ³nico: lunes&ndash;viernes, 10:00&ndash;16:00
           </div>
         </section>
       </div>
