--- a/lesson.html
+++ b/lesson.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Lección | AquiVivo</title>
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260208d" />
-    <script src="assets/js/layout.js?v=20260208d" type="module"></script>
+    <title>LecciÃ³n | AquiVivo</title>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260208m" />
+    <script src="assets/js/layout.js?v=20260208m" type="module"></script>
   </head>
   <body data-page="lesson">
     <div id="appHeader"></div>
@@ -13,9 +13,9 @@
     <main class="page">
       <div class="container">
         <section class="card">
-          <h1 class="sectionTitle" style="margin-top: 0">Lección</h1>
+          <h1 class="sectionTitle" style="margin-top: 0">LecciÃ³n</h1>
           <div class="subtitle">
-            Esta ruta es antigua. Usa <b>lessonpage.html</b> para ver la lección
+            Esta ruta es antigua. Usa <b>lessonpage.html</b> para ver la lecciÃ³n
             y <b>lessonadmin.html</b> para editarla.
           </div>
           <div class="metaRow" style="margin-top: 14px">
