--- a/polityka-prywatnosci.html
+++ b/polityka-prywatnosci.html
@@ -2,14 +2,14 @@
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <title>PolÌtica de privacidad &ndash; AquiVivo</title>
+    <title>Pol√≠tica de privacidad &ndash; AquiVivo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260208d" />
-    <script src="assets/js/layout.js?v=20260208d" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260208m" />
+    <script src="assets/js/layout.js?v=20260208m" type="module"></script>
   </head>
 
   <body data-page="privacy">
@@ -21,9 +21,9 @@
           <div class="heroTitleRow">
             <div class="heroIcon">&#128274;</div>
             <div>
-              <h1 class="glow-text" style="margin: 0">PolÌtica de privacidad</h1>
+              <h1 class="glow-text" style="margin: 0">Pol√≠tica de privacidad</h1>
               <div class="subtitle" style="margin-top: 6px">
-                CÛmo tratamos tus datos en AquiVivo.
+                C√≥mo tratamos tus datos en AquiVivo.
               </div>
             </div>
           </div>
@@ -46,10 +46,10 @@
           <div class="sectionTitle" style="margin-top: 0">Datos que tratamos</div>
           <div class="muted">
             Tratamos, en particular, los datos necesarios para crear una cuenta
-            y prestar los servicios: correo electrÛnico, identificador del
+            y prestar los servicios: correo electr√≥nico, identificador del
             usuario, nombre/handle, datos de perfil, datos sobre el progreso de
-            aprendizaje, datos tÈcnicos del dispositivo y de la conexiÛn (por
-            ejemplo, direcciÛn IP), asÌ como datos de pago (tratados por los
+            aprendizaje, datos t√©cnicos del dispositivo y de la conexi√≥n (por
+            ejemplo, direcci√≥n IP), as√≠ como datos de pago (tratados por los
             proveedores de pago).
           </div>
         </section>
@@ -62,18 +62,18 @@
             Tratamos los datos para:
             <ul>
               <li>
-                la ejecuciÛn del contrato y la prestaciÛn de los servicios (art.
+                la ejecuci√≥n del contrato y la prestaci√≥n de los servicios (art.
                 6.1(b) del RGPD),
               </li>
               <li>
-                la gestiÛn de pagos y facturaciÛn (art. 6.1(b)/(c) del RGPD),
+                la gesti√≥n de pagos y facturaci√≥n (art. 6.1(b)/(c) del RGPD),
               </li>
               <li>
                 la seguridad y el correcto funcionamiento del servicio (art.
                 6.1(f) del RGPD),
               </li>
               <li>
-                el soporte y la atenciÛn al usuario (art. 6.1(b)/(f) del RGPD).
+                el soporte y la atenci√≥n al usuario (art. 6.1(b)/(f) del RGPD).
               </li>
             </ul>
           </div>
@@ -86,25 +86,25 @@
           <div class="muted">
             Utilizamos proveedores (encargados) para infraestructura y pagos:
             <ul>
-              <li>Firebase / Google (autenticaciÛn, base de datos, archivos),</li>
+              <li>Firebase / Google (autenticaci√≥n, base de datos, archivos),</li>
               <li>Stripe (pagos con tarjeta),</li>
               <li>Przelewy24 / PayPro S.A. (pagos P24),</li>
               <li>PayPal (pagos PayPal),</li>
               <li>GitHub Pages (hosting del sitio).</li>
             </ul>
-            Los datos se tratan de acuerdo con sus polÌticas de privacidad y los
+            Los datos se tratan de acuerdo con sus pol√≠ticas de privacidad y los
             acuerdos de tratamiento.
           </div>
         </section>
 
         <section class="card" style="margin-top: 12px">
           <div class="sectionTitle" style="margin-top: 0">
-            Plazo de conservaciÛn
+            Plazo de conservaci√≥n
           </div>
           <div class="muted">
             Conservamos los datos de la cuenta mientras exista la cuenta y,
-            tras su eliminaciÛn, durante el tiempo necesario para cumplir
-            obligaciones legales (por ejemplo, contabilidad). Los datos tÈcnicos
+            tras su eliminaci√≥n, durante el tiempo necesario para cumplir
+            obligaciones legales (por ejemplo, contabilidad). Los datos t√©cnicos
             se conservan durante el tiempo necesario para garantizar la
             seguridad y el correcto funcionamiento del servicio.
           </div>
@@ -115,28 +115,28 @@
             Derechos del usuario
           </div>
           <div class="muted">
-            Tienes derecho de acceso a los datos, rectificaciÛn, supresiÛn,
-            limitaciÛn del tratamiento, portabilidad, oposiciÛn y a presentar
-            una reclamaciÛn ante la autoridad de protecciÛn de datos (UODO).
+            Tienes derecho de acceso a los datos, rectificaci√≥n, supresi√≥n,
+            limitaci√≥n del tratamiento, portabilidad, oposici√≥n y a presentar
+            una reclamaci√≥n ante la autoridad de protecci√≥n de datos (UODO).
           </div>
         </section>
 
         <section class="card" style="margin-top: 12px">
           <div class="sectionTitle" style="margin-top: 0">
-            Cookies y analÌtica
+            Cookies y anal√≠tica
           </div>
           <div class="muted">
-            El sitio utiliza cookies/localStorage tÈcnicos imprescindibles para
-            mantener la sesiÛn y la seguridad. No hemos encontrado una
-            implementaciÛn de Google Analytics ni de Meta Pixel en el cÛdigo de
-            producciÛn.
+            El sitio utiliza cookies/localStorage t√©cnicos imprescindibles para
+            mantener la sesi√≥n y la seguridad. No hemos encontrado una
+            implementaci√≥n de Google Analytics ni de Meta Pixel en el c√≥digo de
+            producci√≥n.
           </div>
         </section>
 
         <section class="card" style="margin-top: 12px">
           <div class="sectionTitle" style="margin-top: 0">Contacto</div>
           <div class="muted">
-            Para asuntos de privacidad, cont·ctanos:
+            Para asuntos de privacidad, cont√°ctanos:
             <a href="mailto:aquivivo.pl@gmail.com">aquivivo.pl@gmail.com</a>
           </div>
         </section>
