--- a/services.html
+++ b/services.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260208d" />
-    <script src="assets/js/layout.js?v=20260208d" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260208m" />
+    <script src="assets/js/layout.js?v=20260208m" type="module"></script>
   </head>
 
   <body
@@ -47,7 +47,7 @@
             >
               <input id="checkoutConsent" type="checkbox" />
               <label for="checkoutConsent" style="margin: 0">
-                He leÌdo y acepto lo anterior.
+                He le√≠do y acepto lo anterior.
               </label>
             </div>
 
@@ -56,15 +56,15 @@
               <div class="hintSmall consentDetailsBody">
                 <ul style="margin: 8px 0 0; padding-left: 18px">
                   <li>
-                    Aceptas los <a href="regulamin.html">TÈrminos</a> y la
-                    <a href="polityka-prywatnosci.html">PolÌtica de privacidad</a>.
+                    Aceptas los <a href="regulamin.html">T√©rminos</a> y la
+                    <a href="polityka-prywatnosci.html">Pol√≠tica de privacidad</a>.
                   </li>
                   <li>
                     Si tu compra incluye contenido digital con acceso inmediato, solicitas la
                     entrega inmediata.
                   </li>
                   <li>
-                    Puede aplicarse pÈrdida del derecho de desistimiento una vez otorgado el
+                    Puede aplicarse p√©rdida del derecho de desistimiento una vez otorgado el
                     acceso (ver <a href="zwroty.html">Devoluciones</a>).
                   </li>
                 </ul>
@@ -73,24 +73,24 @@
           </div>
 
           <div class="card" id="trialCard">
-            <div class="sectionTitle" style="margin-top: 0">?? Prueba gratis A1</div>
+            <div class="sectionTitle" style="margin-top: 0">Prueba gratis A1</div>
             <div class="metaRow" style="margin-top: 10px; gap: 10px; flex-wrap: wrap">
               <button class="btn-yellow" id="btnTrialA1" type="button">
-                Activa A1 gratis 7 dÌas
+                Activa A1 gratis 7 d√≠as
               </button>
             </div>
             <div class="hintSmall" id="trialMsg" style="margin-top: 8px; display: none"></div>
           </div>
 
           <div class="card" id="paypalCard">
-            <div class="sectionTitle" style="margin-top: 0">??? PayPal</div>
+            <div class="sectionTitle" style="margin-top: 0">PayPal</div>
             <div class="muted">
-              Si prefieres PayPal, puedes pagar aquÌ (moneda: <b>PLN</b>).
+              Si prefieres PayPal, puedes pagar aqu√≠ (moneda: <b>PLN</b>).
               <div class="hintSmall" style="margin-top: 6px">
-                Para habilitar el botÛn, marca la casilla de aceptaciÛn de arriba.
+                Para habilitar el bot√≥n, marca la casilla de aceptaci√≥n de arriba.
               </div>
               <div class="hintSmall" style="margin-top: 6px">
-                Si el botÛn no carga, usa ìAbrir PayPalî.
+                Si el bot√≥n no carga, usa ‚ÄúAbrir PayPal‚Äù.
               </div>
             </div>
 
@@ -102,7 +102,7 @@
                 aria-label="Pagar con PayPal"
               ></div>
               <div class="paypal-hosted-overlay" id="paypalHostedOverlay" aria-hidden="true">
-                Marca la casilla de aceptaciÛn para habilitar PayPal.
+                Marca la casilla de aceptaci√≥n para habilitar PayPal.
               </div>
             </div>
 
@@ -122,17 +122,17 @@
         </div>
 
         <section id="planes" class="services-section">
-          <h2 class="sectionTitle" style="margin-top: 0">?? Planes</h2>
+          <h2 class="sectionTitle" style="margin-top: 0">Planes</h2>
           <div id="servicesPlansGrid" class="services-grid"></div>
         </section>
 
         <section id="servicios" class="services-section">
-          <h2 class="sectionTitle" style="margin-top: 0">?? Servicios</h2>
+          <h2 class="sectionTitle" style="margin-top: 0">Servicios</h2>
           <div id="servicesServicesGrid" class="services-grid"></div>
         </section>
 
         <section id="ebooks" class="services-section">
-          <h2 class="sectionTitle" style="margin-top: 0">?? Ebooks</h2>
+          <h2 class="sectionTitle" style="margin-top: 0">Ebooks</h2>
           <div id="servicesEbooksGrid" class="services-grid"></div>
         </section>
 
@@ -151,7 +151,7 @@
       </div>
     </main>
 
-    <script type="module" src="assets/js/pages/services-page.js?v=20260208d"></script>
+    <script type="module" src="assets/js/pages/services-page.js?v=20260208m"></script>
   </body>
 </html>
 
