--- a/login.html
+++ b/login.html
@@ -2,13 +2,13 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <title>Inicia sesión | AquiVivo</title>
+    <title>Inicia sesiÃ³n | AquiVivo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260208d" />
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260208m" />
     <style>
       .auth-wrap {
         max-width: 920px;
@@ -118,7 +118,7 @@
         opacity: 0.9;
       }
     </style>
-    <script src="assets/js/layout.js?v=20260208d" type="module"></script>
+    <script src="assets/js/layout.js?v=20260208m" type="module"></script>
   </head>
   <body data-page="login">
     <div id="appHeader"></div>
@@ -126,7 +126,7 @@
       <div class="container">
         <div class="auth-wrap">
           <div class="hero-card">
-            <h1 class="hero-title glow-text">Inicia sesión</h1>
+            <h1 class="hero-title glow-text">Inicia sesiÃ³n</h1>
             <p class="hero-subtitle">
               Accede a los cursos A1/A2 y tu panel de estudiante.
             </p>
@@ -138,9 +138,9 @@
             </div>
           </div>
           <div class="form-card">
-            <div class="form-title">Inicia sesión / Regístrate</div>
+            <div class="form-title">Inicia sesiÃ³n / RegÃ­strate</div>
             <p class="form-sub">
-              El registro crea una cuenta. Después de iniciar sesión, irás a tu
+              El registro crea una cuenta. DespuÃ©s de iniciar sesiÃ³n, irÃ¡s a tu
               panel de estudiante.
             </p>
             <div class="field">
@@ -161,11 +161,11 @@
                 placeholder="tu_login (solo en registro)"
               />
               <div class="hint" style="margin: 0">
-                Usa 3-20 caracteres: letras, números, guion o punto.
+                Usa 3-20 caracteres: letras, nÃºmeros, guion o punto.
               </div>
             </div>
             <div class="field">
-              <label>Género (registro)</label>
+              <label>GÃ©nero (registro)</label>
               <div style="display: flex; gap: 14px; flex-wrap: wrap">
                 <label
                   style="
@@ -201,19 +201,19 @@
               />
             </div>
             <div class="field">
-              <label for="password">Contraseña</label>
+              <label for="password">ContraseÃ±a</label>
               <div style="position: relative">
                 <input
                   class="input"
                   type="password"
                   id="password"
-                  placeholder="Contraseña"
+                  placeholder="ContraseÃ±a"
                   style="padding-right: 48px"
                 />
                 <button
                   type="button"
                   id="togglePassword"
-                  title="Mostrar / ocultar contraseña"
+                  title="Mostrar / ocultar contraseÃ±a"
                   style="
                     position: absolute;
                     right: 12px;
@@ -226,29 +226,29 @@
                     opacity: 0.75;
                   "
                 >
-                  ???
+                  
                 </button>
               </div>
             </div>
             <div class="actions">
               <button class="btn-yellow" id="loginBtn" type="button">
-                Inicia sesión
+                Inicia sesiÃ³n
               </button>
               <button class="btn-red" id="registerBtn" type="button">
-                Regístrate
+                RegÃ­strate
               </button>
               <button class="btn-white-outline" id="googleLoginBtn" type="button">
                 Inicia con Google
               </button>
             </div>
             <button class="reset-link" type="button" id="resetPasswordBtn">
-              Olvidé mi contraseña
+              OlvidÃ© mi contraseÃ±a
             </button>
             <div id="message" class="msg"></div>
             <div class="hint">
               Al registrarte, aceptas nuestros
-              <a href="TOS.html" target="_blank">Términos de Servicio</a> y
-              <a href="Privacy.html" target="_blank">Política de Privacidad</a>
+              <a href="TOS.html" target="_blank">TÃ©rminos de Servicio</a> y
+              <a href="Privacy.html" target="_blank">PolÃ­tica de Privacidad</a>
             </div>
           </div>
         </div>
