--- a/review.html
+++ b/review.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800;900&family=Playfair+Display:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/styles.css?v=20260208d" />
-    <script src="assets/js/layout.js?v=20260208d" type="module"></script>
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260208m" />
+    <script src="assets/js/layout.js?v=20260208m" type="module"></script>
   </head>
 
   <body data-page="review">
@@ -19,7 +19,7 @@
       <div class="container">
         <section class="heroBanner heroBanner--review">
           <div class="heroTitleRow">
-            <div class="heroIcon">??</div>
+            <div class="heroIcon"></div>
             <div>
               <h1 class="glow-text" style="margin: 0">Repaso</h1>
               <div class="subtitle" id="reviewSubtitle" style="margin-top: 6px">
@@ -74,10 +74,10 @@
               ? Favorito
             </button>
             <button class="btn-yellow" id="btnCorrect" type="button" disabled>
-              La sé
+              La sÃ©
             </button>
             <button class="btn-red" id="btnWrong" type="button" disabled>
-              No lo sé
+              No lo sÃ©
             </button>
             <a class="btn-white-outline" href="espanel.html">Terminar</a>
           </div>
@@ -87,7 +87,7 @@
         <section class="card" id="reviewEmpty" style="display: none; margin-top: 14px">
           <div class="sectionTitle" style="margin-top: 0">Sin repasos</div>
           <div class="muted">
-            Hoy no hay tarjetas para repasar. Vuelve mañana o haz nuevos ejercicios.
+            Hoy no hay tarjetas para repasar. Vuelve maÃ±ana o haz nuevos ejercicios.
           </div>
           <div style="margin-top: 12px">
             <a class="btn-yellow" href="espanel.html">Volver a la Libreta</a>
